src/jnprsr/parser/JuniperParser.py
# Generated from JuniperParser.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JuniperParser ( Parser ):

    grammarFileName = "JuniperParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'replace:'", "'}'", "']'", "')'", "'inactive:'", 
                     "<INVALID>", "<INVALID>", "'{'", "'['", "'('", "';'" ]

    symbolicNames = [ "<INVALID>", "REPLACE", "CLOSE_BRACE", "CLOSE_BRACKET", 
                      "CLOSE_PAREN", "INACTIVE", "LINE_COMMENT", "MULTILINE_COMMENT", 
                      "OPEN_BRACE", "OPEN_BRACKET", "OPEN_PAREN", "SEMICOLON", 
                      "WORD", "WS" ]

    RULE_braced_clause = 0
    RULE_bracketed_clause = 1
    RULE_juniper_configuration = 2
    RULE_statement = 3
    RULE_terminator = 4
    RULE_word = 5

    ruleNames =  [ "braced_clause", "bracketed_clause", "juniper_configuration", 
                   "statement", "terminator", "word" ]

    EOF = Token.EOF
    REPLACE=1
    CLOSE_BRACE=2
    CLOSE_BRACKET=3
    CLOSE_PAREN=4
    INACTIVE=5
    LINE_COMMENT=6
    MULTILINE_COMMENT=7
    OPEN_BRACE=8
    OPEN_BRACKET=9
    OPEN_PAREN=10
    SEMICOLON=11
    WORD=12
    WS=13

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Braced_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACE(self):
            return self.getToken(JuniperParser.OPEN_BRACE, 0)

        def CLOSE_BRACE(self):
            return self.getToken(JuniperParser.CLOSE_BRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuniperParser.StatementContext)
            else:
                return self.getTypedRuleContext(JuniperParser.StatementContext,i)


        def getRuleIndex(self):
            return JuniperParser.RULE_braced_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBraced_clause" ):
                listener.enterBraced_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBraced_clause" ):
                listener.exitBraced_clause(self)




    def braced_clause(self):

        localctx = JuniperParser.Braced_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_braced_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.match(JuniperParser.OPEN_BRACE)
            self.state = 16
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JuniperParser.REPLACE) | (1 << JuniperParser.INACTIVE) | (1 << JuniperParser.WORD))) != 0):
                self.state = 13
                self.statement()
                self.state = 18
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 19
            self.match(JuniperParser.CLOSE_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bracketed_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACKET(self):
            return self.getToken(JuniperParser.OPEN_BRACKET, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(JuniperParser.CLOSE_BRACKET, 0)

        def word(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuniperParser.WordContext)
            else:
                return self.getTypedRuleContext(JuniperParser.WordContext,i)


        def getRuleIndex(self):
            return JuniperParser.RULE_bracketed_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBracketed_clause" ):
                listener.enterBracketed_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBracketed_clause" ):
                listener.exitBracketed_clause(self)




    def bracketed_clause(self):

        localctx = JuniperParser.Bracketed_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bracketed_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.match(JuniperParser.OPEN_BRACKET)
            self.state = 23 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 22
                self.word()
                self.state = 25 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==JuniperParser.WORD):
                    break

            self.state = 27
            self.match(JuniperParser.CLOSE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Juniper_configurationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JuniperParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuniperParser.StatementContext)
            else:
                return self.getTypedRuleContext(JuniperParser.StatementContext,i)


        def getRuleIndex(self):
            return JuniperParser.RULE_juniper_configuration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJuniper_configuration" ):
                listener.enterJuniper_configuration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJuniper_configuration" ):
                listener.exitJuniper_configuration(self)




    def juniper_configuration(self):

        localctx = JuniperParser.Juniper_configurationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_juniper_configuration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 29
                self.statement()
                self.state = 32 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JuniperParser.REPLACE) | (1 << JuniperParser.INACTIVE) | (1 << JuniperParser.WORD))) != 0)):
                    break

            self.state = 34
            self.match(JuniperParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._word = None # WordContext
            self.words = list() # of WordContexts

        def braced_clause(self):
            return self.getTypedRuleContext(JuniperParser.Braced_clauseContext,0)


        def terminator(self):
            return self.getTypedRuleContext(JuniperParser.TerminatorContext,0)


        def INACTIVE(self):
            return self.getToken(JuniperParser.INACTIVE, 0)

        def REPLACE(self):
            return self.getToken(JuniperParser.REPLACE, 0)

        def word(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuniperParser.WordContext)
            else:
                return self.getTypedRuleContext(JuniperParser.WordContext,i)


        def bracketed_clause(self):
            return self.getTypedRuleContext(JuniperParser.Bracketed_clauseContext,0)


        def getRuleIndex(self):
            return JuniperParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = JuniperParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JuniperParser.REPLACE or _la==JuniperParser.INACTIVE:
                self.state = 36
                _la = self._input.LA(1)
                if not(_la==JuniperParser.REPLACE or _la==JuniperParser.INACTIVE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 40 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 39
                localctx._word = self.word()
                localctx.words.append(localctx._word)
                self.state = 42 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==JuniperParser.WORD):
                    break

            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JuniperParser.OPEN_BRACE]:
                self.state = 44
                self.braced_clause()
                pass
            elif token in [JuniperParser.OPEN_BRACKET]:
                self.state = 45
                self.bracketed_clause()
                self.state = 46
                self.terminator()
                pass
            elif token in [JuniperParser.SEMICOLON]:
                self.state = 48
                self.terminator()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(JuniperParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return JuniperParser.RULE_terminator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminator" ):
                listener.enterTerminator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminator" ):
                listener.exitTerminator(self)




    def terminator(self):

        localctx = JuniperParser.TerminatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_terminator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(JuniperParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(JuniperParser.WORD, 0)

        def getRuleIndex(self):
            return JuniperParser.RULE_word

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWord" ):
                listener.enterWord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWord" ):
                listener.exitWord(self)




    def word(self):

        localctx = JuniperParser.WordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_word)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(JuniperParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





